# osars

./: Cargo.toml  all_source_code.txt
examples/: full_chain.rs  full_flow.rs
src/: client.rs  lib.rs
src/api/: campuses.rs  colleges.rs  groups.rs  mod.rs
src/models/: call.rs  campus.rs  college.rs  group.rs  lesson.rs  mod.rs  schedule.rs
src/utils/: date_serde.rs  mod.rs
