[package]
name = "osars"
version = "0.1.0"
edition = "2024"

[lib]
name = "osapi"
source = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
urlencoding = "2.1.3"
