[package]
name = "osars"
version = "0.1.0"
edition = "2024"
description = "Rust client library for OpenScheduleAPI - educational schedule management system"
readme = "README.md"
keywords = ["schedule", "education", "api-client", "college", "university"]
categories = ["api-bindings", "education"]
license = "MIT"
authors = ["Vadim <vadim@storozhiloff.ru>"]
repository = "https://github.com/bircoder432/osars"
documentation = "https://docs.rs/osars"
homepage = "https://github.com/bircoder432/osars"

[lib]
name = "osars"

[features]
default = []
logging = ["tracing", "tracing-subscriber"]
full = ["logging"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "fmt"] }
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.7"
tokio = { version = "1.48", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
    { file="README.md", search="osars = \"0.1.0\"", replace="osars = \"{{version}}\"" },
    { file="README.md", search="version = \"0.1.0\"", replace="version = \"{{version}}\"" },
]
